--- a/estimator.html
+++ b/estimator.html
@@ -34,6 +34,7 @@
                     <td class="calculated-illuminance"></td>
                     <td class="target-illuminance"></td>
                     <td class="room-illuminance"></td>
+                    <td class="check-illuminance"></td>
                 </tr>
             </table>
             <h2>Room Details</h2>
