--- a/index.html
+++ b/index.html
@@ -4,85 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>ROKN AL WAHDA</title>
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/styles/css/styles.css">
-
-  <style>
-    /* Custom CSS for mobile view */
-    @media (max-width: 768px) {
-      header {
-        padding: 10px;
-      }
-
-      .header-content {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .title-container {
-        margin-bottom: 10px;
-      }
-
-      #logo {
-        width: 40px;
-        margin-right: 5px;
-      }
-
-      .header-text {
-        margin-left: 5px;
-      }
-
-      h1 {
-        font-size: 1.2rem;
-      }
-
-      p {
-        font-size: 0.8rem;
-      }
-
-      nav {
-        justify-content: space-between;
-        margin-top: 10px;
-      }
-
-      main {
-        padding: 20px 0;
-      }
-
-      .section {
-        padding: 20px;
-      }
-
-      .image-container {
-        flex-direction: column;
-      }
-
-      .image {
-        max-width: 100%;
-        height: auto;
-        margin-bottom: 10px;
-      }
-
-      .button-container {
-        flex-direction: column;
-      }
-
-      .button-container button,
-      .myButton {
-        margin-bottom: 10px;
-      }
-
-      .form-group {
-        margin-bottom: 10px;
-      }
-    }
-  </style>
 
 </head>
 
@@ -91,53 +17,19 @@
   <header>
     <div class="header-content">
       <div class="title-container">
-        <img src="/styles/image/Logo.png" alt="Company Logo" id="logo">
         <div class="header-text">
           <h1>ROKN AL WAHDA</h1>
-          <p>Your Lighting Solution Experts</p>
         </div>
       </div>
-      <nav>
-        <a href="#home" class="nav-item">Home</a>
-        <a href="#services" class="nav-item">Services</a>
-        <a href="#contact" class="nav-item">Contact</a>
-      </nav>
     </div>
   </header>
 
   <main>
-    <section id="home" class="section">
-      <div class="content-container">
-        <h1>Welcome to Illuminate Design Consultancy</h1>
-        <p>Our pioneering startup is a beacon in the realm of sustainable lighting design, empowering other startups by
-          illuminating their path to success. We offer more than just services; we are your strategic partners in
-          entrepreneurship, delivering unique lighting solutions that elevate your business and brand.
-        </p>
-        <p>Our wealth of expertise spans diverse sectors, from residential to commercial and public space lighting
-          design. We pride ourselves on our adaptability, tailoring our innovative lighting strategies to the
-          distinctive needs of your startup.
-        </p>
-      </div>
-      <div class="image-container">
-        <img src="/styles/image/dialu.jpg" alt="Dialu Image" class="image">
-        <img src="/styles/image/cad.jpg" alt="Dialu Image" class="image">
-      </div>
-    </section>
-
+    
     <section id="services" class="section">
-      <h2>Our Services</h2>
-      <p>We provide comprehensive lighting design services including:</p>
+      <h2>Free Tools</h2>
       <div class="button-container">
-        <button>Lighting Design Consultation</button>
-        <button>Lighting Calculation</button>
-        <button>Lighting Installation Planning</button>
-        <button>Energy Efficiency Auditing</button>
-        <button>Custom Lighting Solutions</button>
-        <button>Product Selection</button>
-      </div>
-      <h2>Try Our Lighting Calculator for Free</h2>
-      <div class="button-container">
-        <a href="/calculator.html" class="myButton">Lighting Calculator</a>
+        <a href="/report.html" class="myButton">Lighting Calculator</a>
       </div>
     </section>
 
@@ -160,6 +52,7 @@
         <button type="submit">Send Message</button>
       </form>
     </section>
+
   </main>
 
 </body>
