--- a/inspector.html
+++ b/inspector.html
@@ -43,8 +43,8 @@
                     <fieldset>
                         <legend>Room Information</legend>
                         <label for="edit-room-name">Name</label>
-                        <!-- input for name here -->
-                        <button id="save-room">Save</button>
+                        <input type="text" id="edit-room-name">
+
                     </fieldset>
 
                     <fieldset>
@@ -75,6 +75,8 @@
                                 <button id="drain-button">Check Drain</button>
                             </div>
                         </div>
+                        <button id="save-room">Save</button>
+                        <button id="delete-room">Save</button>
                     </fieldset>
                 </div>
 
