--- a/inspector.html
+++ b/inspector.html
@@ -24,6 +24,7 @@
                 <option value=""></option>
                 <option value="Apartment">Apartment</option>
                 <option value="Villa">Villa</option>
+                <option value="Office">Office</option>
             </select>
         </div>
         <div class="input-group">
